Remove auth endpoints
